overflow fixed

--- a/style.css
+++ b/style.css
@@ -9,6 +9,7 @@
     margin: 0;
     box-sizing: border-box;
     font-family: "Space Mono", monospace;
+    overflow-x: hidden;
 }
 
 body{
